tirei o label do lblDataTelaInicial

--- a/src/telas/TelaInicial.form
+++ b/src/telas/TelaInicial.form
@@ -56,7 +56,7 @@
               <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="lblInterfaceTelaInicial" alignment="3" min="-2" pref="42" max="-2" attributes="0"/>
-                  <Component id="lblDataTelaInicial" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblDataTelaInicial" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="sprTelaInicial" min="-2" pref="10" max="-2" attributes="0"/>
@@ -108,9 +108,6 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="lblDataTelaInicial">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jLabel1"/>
-      </Properties>
     </Component>
   </SubComponents>
 </Form>
