--- a/src/telas/TelaInicial.form
+++ b/src/telas/TelaInicial.form
@@ -35,11 +35,18 @@
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="btnGerenteTelaInicial" min="-2" pref="170" max="-2" attributes="0"/>
-                  <Component id="btnFuncionarioTelaInicial" min="-2" pref="170" max="-2" attributes="0"/>
-                  <Component id="btnClienteTelaInicial" min="-2" pref="170" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="btnGerenteTelaInicial" min="-2" pref="170" max="-2" attributes="0"/>
+                          <Component id="btnClienteTelaInicial" min="-2" pref="170" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="213" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Component id="btnFuncionarioTelaInicial" min="-2" pref="170" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace min="-2" pref="213" max="-2" attributes="0"/>
           </Group>
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
