--- a/src/telas/CozinheiroeCaixa.form
+++ b/src/telas/CozinheiroeCaixa.form
@@ -2,7 +2,7 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="2"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -91,6 +91,7 @@
               <Image iconType="3" name="/imagens/cozinheiro.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Cozinheiro"/>
+            <Property name="toolTipText" type="java.lang.String" value="Acessar painel cozinheiro"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCozinheiroActionPerformed"/>
@@ -102,6 +103,7 @@
               <Image iconType="3" name="/imagens/caixa.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Caixa"/>
+            <Property name="toolTipText" type="java.lang.String" value="Acessar painel caixa"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCaixaActionPerformed"/>
@@ -112,6 +114,7 @@
     <Component class="javax.swing.JButton" name="btnSair">
       <Properties>
         <Property name="text" type="java.lang.String" value="Sair"/>
+        <Property name="toolTipText" type="java.lang.String" value="fechar janela"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSairActionPerformed"/>
