--- a/src/telas/FazerPedido.form
+++ b/src/telas/FazerPedido.form
@@ -244,7 +244,7 @@
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="117" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="pedidoDeAniversario" max="32767" attributes="0"/>
+                                  <Component id="checkBoxPedidoDeAniversario" max="32767" attributes="0"/>
                                   <Group type="102" attributes="0">
                                       <Component id="label2" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
@@ -261,7 +261,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace pref="174" max="32767" attributes="0"/>
-                      <Component id="pedidoDeAniversario" min="-2" pref="38" max="-2" attributes="0"/>
+                      <Component id="checkBoxPedidoDeAniversario" min="-2" pref="38" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="label2" alignment="1" min="-2" max="-2" attributes="0"/>
@@ -305,7 +305,7 @@
                 <Property name="text" type="java.lang.String" value="Valor total:"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JCheckBox" name="pedidoDeAniversario">
+            <Component class="javax.swing.JCheckBox" name="checkBoxPedidoDeAniversario">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Inter" size="18" style="0"/>
@@ -313,7 +313,7 @@
                 <Property name="text" type="java.lang.String" value="Pedido de Anivers&#xe1;rio"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pedidoDeAniversarioActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="checkBoxPedidoDeAniversarioActionPerformed"/>
               </Events>
             </Component>
           </SubComponents>
