--- a/src/telas/TelaInicial.form
+++ b/src/telas/TelaInicial.form
@@ -33,7 +33,7 @@
               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="btnGerenteTelaInicial" min="-2" pref="170" max="-2" attributes="0"/>
-                  <Component id="btnClienteTelaInicial" min="-2" pref="170" max="-2" attributes="0"/>
+                  <Component id="btnCliente" min="-2" pref="170" max="-2" attributes="0"/>
                   <Component id="btnFuncionarioTelaInicial" alignment="0" min="-2" pref="170" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="213" max="-2" attributes="0"/>
@@ -60,7 +60,7 @@
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="lblEscolhaPerfilTelainicial" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="btnClienteTelaInicial" min="-2" pref="70" max="-2" attributes="0"/>
+              <Component id="btnCliente" min="-2" pref="70" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="btnFuncionarioTelaInicial" min="-2" pref="70" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
@@ -71,10 +71,13 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JButton" name="btnClienteTelaInicial">
+    <Component class="javax.swing.JButton" name="btnCliente">
       <Properties>
         <Property name="text" type="java.lang.String" value="Cliente"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnClienteActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="lblInterfaceTelaInicial">
       <Properties>
