--- a/src/telas/FazerPedido.form
+++ b/src/telas/FazerPedido.form
@@ -85,25 +85,13 @@
                 <Component class="javax.swing.JTable" name="tabelaProdutosDisponiveis">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="4" rowCount="4">
+                      <Table columnCount="2" rowCount="4">
                         <Column editable="true" title="Nome" type="java.lang.String"/>
-                        <Column editable="true" title="Descri&#xe7;&#xe3;o" type="java.lang.String"/>
                         <Column editable="true" title="Pre&#xe7;o (R$)" type="java.lang.Float"/>
-                        <Column editable="true" title="Quantidade" type="java.lang.Integer"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0">
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                           <Title/>
                           <Editor/>
@@ -127,6 +115,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Adicionar ao Carrinho"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botaoAdicionarAoCarrinhoActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -185,9 +176,9 @@
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="3" rowCount="4">
-                        <Column editable="false" title="Nome" type="java.lang.Object"/>
-                        <Column editable="false" title="Descri&#xe7;&#xe3;o" type="java.lang.Object"/>
-                        <Column editable="false" title="Pre&#xe7;o (R$)" type="java.lang.Object"/>
+                        <Column editable="false" title="Nome" type="java.lang.String"/>
+                        <Column editable="false" title="Pre&#xe7;o (R$)" type="java.lang.Float"/>
+                        <Column editable="false" title="Quantidade" type="java.lang.Integer"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -220,6 +211,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Excluir Produto"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botaoExcluirActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -248,7 +242,7 @@
                                   <Group type="102" attributes="0">
                                       <Component id="label2" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
-                                      <Component id="valorTotal" min="-2" max="-2" attributes="0"/>
+                                      <Component id="labelValorTotal" min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -265,7 +259,7 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="label2" alignment="1" min="-2" max="-2" attributes="0"/>
-                          <Component id="valorTotal" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="labelValorTotal" alignment="1" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                       <Component id="botaoFinalizarPedido" min="-2" max="-2" attributes="0"/>
@@ -283,7 +277,7 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botaoFinalizarPedidoActionPerformed"/>
               </Events>
             </Component>
-            <Component class="java.awt.Label" name="valorTotal">
+            <Component class="java.awt.Label" name="labelValorTotal">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Inter" size="24" style="0"/>
