--- a/src/telas/FazerPedido.form
+++ b/src/telas/FazerPedido.form
@@ -85,7 +85,7 @@
                 <Component class="javax.swing.JTable" name="tabelaProdutosDisponiveis">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="2" rowCount="4">
+                      <Table columnCount="2" rowCount="17">
                         <Column editable="true" title="Nome" type="java.lang.String"/>
                         <Column editable="true" title="Pre&#xe7;o (R$)" type="java.lang.Float"/>
                       </Table>
@@ -175,7 +175,7 @@
                 <Component class="javax.swing.JTable" name="tabelaCarrinho">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="3" rowCount="4">
+                      <Table columnCount="3" rowCount="17">
                         <Column editable="false" title="Nome" type="java.lang.String"/>
                         <Column editable="false" title="Pre&#xe7;o (R$)" type="java.lang.Float"/>
                         <Column editable="false" title="Quantidade" type="java.lang.Integer"/>
@@ -237,12 +237,15 @@
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="117" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="checkBoxPedidoDeAniversario" max="32767" attributes="0"/>
-                                  <Group type="102" attributes="0">
-                                      <Component id="label2" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
-                                      <Component id="labelValorTotal" min="-2" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="formaDePagamento" min="-2" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                      <Group type="102" attributes="0">
+                                          <Component id="label2" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
+                                          <Component id="labelValorTotal" min="-2" max="-2" attributes="0"/>
+                                      </Group>
+                                      <Component id="checkBoxPedidoDeAniversario1" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -254,8 +257,10 @@
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace pref="174" max="32767" attributes="0"/>
-                      <Component id="checkBoxPedidoDeAniversario" min="-2" pref="38" max="-2" attributes="0"/>
+                      <EmptySpace pref="145" max="32767" attributes="0"/>
+                      <Component id="formaDePagamento" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="checkBoxPedidoDeAniversario1" min="-2" pref="38" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="label2" alignment="1" min="-2" max="-2" attributes="0"/>
@@ -283,7 +288,7 @@
                   <Font name="Inter" size="24" style="0"/>
                 </Property>
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="bb" green="bb" red="bb" type="rgb"/>
+                  <Color blue="33" green="33" red="33" type="rgb"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="R$ **,**"/>
               </Properties>
@@ -291,15 +296,15 @@
             <Component class="java.awt.Label" name="label2">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Inter" size="24" style="0"/>
+                  <Font name="Inter" size="24" style="1"/>
                 </Property>
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="bb" green="bb" red="bb" type="rgb"/>
+                  <Color blue="33" green="33" red="33" type="rgb"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Valor total:"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JCheckBox" name="checkBoxPedidoDeAniversario">
+            <Component class="javax.swing.JCheckBox" name="checkBoxPedidoDeAniversario1">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Inter" size="18" style="0"/>
@@ -307,8 +312,22 @@
                 <Property name="text" type="java.lang.String" value="Pedido de Anivers&#xe1;rio"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="checkBoxPedidoDeAniversarioActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="checkBoxPedidoDeAniversario1ActionPerformed"/>
               </Events>
+            </Component>
+            <Component class="javax.swing.JComboBox" name="formaDePagamento">
+              <Properties>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                  <StringArray count="3">
+                    <StringItem index="0" value="Selecione a forma de pagamento"/>
+                    <StringItem index="1" value="Dinheiro"/>
+                    <StringItem index="2" value="Cart&#xe3;o de Cr&#xe9;dito"/>
+                  </StringArray>
+                </Property>
+              </Properties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+              </AuxValues>
             </Component>
           </SubComponents>
         </Container>
